@@ -8,7 +8,7 @@
   <tr align="center" bgcolor="#e4e4e4">
     <td>
       <h1><big><font color="#3c34ec"><i>NuttShell (NSH)</i></font></big></h1>
-      <p>Last Updated: February 3, 2014</p>
+      <p>Last Updated: February 19, 2014</p>
     </td>
   </tr>
 </table>
@@ -2727,7 +2727,7 @@ nsh>
   </tr>
   <tr>
     <td><b><code>rmdir</code></b></td>
-    <td>!<code>CONFIG_DISABLE_MOUNTPOINT</code> &amp;&amp; <code>CONFIG_NFILE_DESCRIPTORS</code> &gt; 0 &amp;&amp; <code>CONFIG_FS_WRITABLE</code><sup>4</sup></td>
+    <td><code>CONFIG_NFILE_DESCRIPTORS</code> &gt; 0</td>
     <td><code>CONFIG_NSH_DISABLE_RMDIR</code></td>
   </tr>
   <tr>
